--- a/cloudfunctions/openapi/config.json
+++ b/cloudfunctions/openapi/config.json
@@ -1,15 +1,8 @@
 {
   "permissions": {
     "openapi": [
-      "wxacode.get",
-      "subscribeMessage.send",
-      "subscribeMessage.addTemplate",
-      "templateMessage.send",
-      "templateMessage.addTemplate",
-      "templateMessage.deleteTemplate",
-      "templateMessage.getTemplateList",
-      "templateMessage.getTemplateLibraryById",
-      "templateMessage.getTemplateLibraryList"
+      "security.imgSecCheck",
+      "security.msgSecCheck"
     ]
   }
 }
