版本：1.0.9.1 内容：20201117 人情管理模块，增加查看明细功能

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -13,7 +13,8 @@
     "pages/relationOptionMgt/relationOptionMgt",
     "pages/relationOptionsForm/relationOptionsForm",
     "pages/causeOptionMgt/causeOptionMgt",
-    "pages/causeOptionsForm/causeOptionsForm"
+    "pages/causeOptionsForm/causeOptionsForm",
+    "pages/relationAccountDetail/relationAccountDetail"
   ],
   "window":{
     "backgroundTextStyle":"light",
