版本：1.0.9.4 内容：20201119 首页增加查看账本详情

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -14,7 +14,8 @@
     "pages/relationOptionsForm/relationOptionsForm",
     "pages/causeOptionMgt/causeOptionMgt",
     "pages/causeOptionsForm/causeOptionsForm",
-    "pages/relationAccountDetail/relationAccountDetail"
+    "pages/relationAccountDetail/relationAccountDetail",
+    "pages/indexDetail/indexDetail"
   ],
   "window":{
     "backgroundTextStyle":"light",
